fix: changed avatar for a professional appearance. change in header to improve readability - in light mode

--- a/src/app/home/about-me/about-me.component.scss
+++ b/src/app/home/about-me/about-me.component.scss
@@ -11,3 +11,14 @@
 .avatar.scale-up {
   transform: scale(1.5);
 }
+
+.avatar-bg {
+  position: absolute;
+  z-index: 5;
+  opacity: 0.5;
+}
+
+.avatar-fg {
+  position: absolute;
+  z-index: 10;
+}
